# facewebcam

./: CMakeLists.txt  FaceWebCam.cpp  FaceWebCam.desktop.in  Info.plist  README.md  facewebcam.xpm
include/: MyResizableBitmapPanel.h  author_info.h  friends_info.h  frmFaceDetectionSetup.h  frmMain.h  frmPopup.h  frmWebCamSetup.h  lib_face_recog.h  nemslib_webcam.h  person_info.h  public_variables.h
src/: author_info.cpp  friends_info.cpp  frmFaceDetectionSetup.cpp  frmMain.cpp  frmPopup.cpp  frmWebCamSetup.cpp  lib_face_recog.cpp  nemslib_webcam.cpp  person_info.cpp
